# todo

./: .dockerignore  .env.example  .gitattributes  .gitignore  Caddyfile  README.md  backup.sh  bootstrap.sh  deploy.sh  docker-compose.prod.yml  docker-compose.shared-caddy.yml  docker-compose.yml  restore.sh
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_phase2_to_5_tables.py  003_add_memos_table.py
backend/app/: config.py  main.py
backend/app/ai_providers/: models.py  routes.py  schemas.py  service.py
backend/app/api/: router.py
backend/app/auth/: dependencies.py  jwt_utils.py  models.py  routes.py  schemas.py
backend/app/celery_tasks/: ai_tasks.py  beat_schedule.py  celery_app.py  summary_tasks.py
backend/app/db/: encryption.py  session.py
backend/app/feishu/: models.py  routes.py  schemas.py  service.py
backend/app/habits/: models.py  routes.py  schemas.py  service.py
backend/app/memos/: models.py  routes.py  schemas.py  service.py
backend/app/okrs/: models.py  routes.py  schemas.py  service.py
backend/app/pomodoro/: models.py  routes.py  schemas.py  service.py
backend/app/projects/: models.py  routes.py  schemas.py  service.py
backend/app/reviews/: models.py  routes.py  schemas.py  service.py
backend/app/scripts/: seed_admin.py
backend/tests/: conftest.py  test_ai_providers.py  test_auth.py  test_feishu.py  test_habits.py  test_memos.py  test_okrs.py  test_pomodoro.py  test_projects.py  test_reviews.py  test_stats.py  test_summaries.py  test_tasks.py
docker/: nginx.conf  (+5 more)
(+131 files in other folders)
